# ai-job-assistant

./: .gitignore  Notes.txt  README.md  main.py  pyproject.toml
backend/: main.py  security_audit.py  security_tests.py
backend/agents/: graph.py  nodes.py  state.py
backend/core/: config.py
backend/db/: db_service.py  models.py
backend/models/: schemas.py
backend/services/: openai_service.py  rapidapi_service.py  resume_service.py  security.py  serpapi_service.py  text_utils.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
